tests/fixtures/errors/e0110_ambiguous_reference.mimz
// expect: E0110
import e0110_support.other

module Fifo {
  out y: bit
  y = 0
}

module M {
  let u = Fifo() { }
}
